--- a/Pages/Clients/Create.cshtml
+++ b/Pages/Clients/Create.cshtml
@@ -50,7 +50,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Client.Gender" class="control-label"></label>
-                <select asp-for="Client.Gender" class="form-control"></select>
+                <select asp-for="Client.Gender" class="form-control" asp-items="ViewBag.Genders"></select>
                 <span asp-validation-for="Client.Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
