--- a/Pages/Offers/Edit.cshtml
+++ b/Pages/Offers/Edit.cshtml
@@ -31,12 +31,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Offer.TimePeriod" class="control-label"></label>
-                <select asp-for="Offer.TimePeriod" class="form-control"></select>
+                <select asp-for="Offer.TimePeriod" class="form-control" asp-items="ViewBag.TimePeriods"></select>
                 <span asp-validation-for="Offer.TimePeriod" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Offer.MealType" class="control-label"></label>
-                <select asp-for="Offer.MealType" class="form-control"></select>
+                <select asp-for="Offer.MealType" class="form-control" asp-items="ViewBag.MealTypes"></select>
                 <span asp-validation-for="Offer.MealType" class="text-danger"></span>
             </div>
             <div class="form-group">
