--- a/Pages/Clients/Index.cshtml
+++ b/Pages/Clients/Index.cshtml
@@ -71,6 +71,7 @@
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-page="./Reservations" asp-route-id="@item.Id">Reservations</a>
             </td>
         </tr>
 }
